fixing menu on iPhone/iPad

--- a/content/css/core.css
+++ b/content/css/core.css
@@ -398,6 +398,10 @@ body{
 
 .menu-fixed {
     position: fixed;
+    top: 0;
+    left: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .menu-absolute {
